--- a/login copy.html
+++ b/login copy.html
@@ -6,85 +6,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- layui -->
+    <!-- 导入layui的样式表 -->
     <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
-    <!-- login -->
+    <!-- 导入login的样式表 -->
     <link rel="stylesheet" href="./assets/css/login.css">
 </head>
 
 <body>
-    <!-- 头部Logo区域 -->
+    <!-- 头部logo区域 -->
     <div class="layui-main">
         <img src="./assets/images/logo.png" alt="">
     </div>
     <!-- 登录注册区域 -->
     <div class="loginAndRegBox">
         <div class="title-box"></div>
-        <!-- 登录的div -->
+        <!-- 登录div -->
         <div class="login-box">
-            <!-- 登录的表单 -->
-            <form class="layui-form" id="form_login">
+            <!-- 登录表单 -->
+            <form class="layui-form" action="">
                 <!-- 用户名 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i>
                     <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
-                        autocomplete="off" class="layui-input" />
+                        autocomplete="off" class="layui-input">
                 </div>
                 <!-- 密码 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input" />
+                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
                 </div>
-                <!-- 登录按钮 -->
+                <!-- 按钮 -->
                 <div class="layui-form-item">
-                    <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
-                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit>登录</button>
                 </div>
+                <!-- 注册链接 -->
                 <div class="layui-form-item links">
                     <a href="javascript:;" id="link_reg">去注册账号</a>
                 </div>
             </form>
         </div>
-        <!-- 注册的div -->
+        <!-- 注册div -->
         <div class="reg-box">
-            <!-- 注册的表单 -->
-            <form class="layui-form" id="form_reg">
+            <!-- 登录表单 -->
+            <form class="layui-form" action="">
                 <!-- 用户名 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i>
                     <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
-                        autocomplete="off" class="layui-input" />
+                        autocomplete="off" class="layui-input">
                 </div>
                 <!-- 密码 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
                     <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input" />
+                        autocomplete="off" class="layui-input">
                 </div>
                 <!-- 密码确认框 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
                     <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
-                        placeholder="再次确认密码" autocomplete="off" class="layui-input" />
+                        placeholder="再次确认密码" autocomplete="off" class="layui-input">
                 </div>
-                <!-- 注册按钮 -->
+                <!-- 按钮 -->
                 <div class="layui-form-item">
-                    <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
-                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit>注册</button>
                 </div>
+                <!-- 注册链接 -->
                 <div class="layui-form-item links">
-                    <a href="javascript:;" id="link_login">去登录</a>
+                    <a href="javascript:;" id="link_login">去注册账号</a>
                 </div>
             </form>
+
         </div>
     </div>
     <!-- 导入jQuery.js -->
     <script src="./assets/lib/jquery.js"></script>
     <!-- 导入 layui 的JS文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
-    <!-- 导入baseAPI -->
-    <script src="./assets/js/baseAPI.js"></script>
     <!-- 导入自己的js文件 -->
     <script src="./assets/js/myLogin.js"></script>
 </body>
